--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appdirs==1.4.4
 asgiref==3.3.4
 distlib==0.3.1
 Django==3.2.3
+djangorestframework==3.12.4
 filelock==3.0.12
 pytz==2021.1
 six==1.16.0
